src/test/deca/context/valid/decl_field.deca
// Description:
//    Test d'une déclaration de champs sans initialisation
//
// Résultats:
//    OK
//
// Historique:
//    créé le 19/01/2017


class A {
  int x;
}
